# bilibili-sync

./: .env.example  .gitignore  README.md  SETUP_LOG.md  bilibili_sync.db-shm  bilibili_sync.db-wal  cleanup.sh  config.yaml  pyproject.toml  requirements.txt  setup.sh
src/: asr.py  auth.py  config.py  database.py  exporter.py  llm.py  main.py  processor.py  sync.py  utils.py
src/api/: actions.py  client.py  favorites.py  subtitles.py  video_info.py  watch_later.py
